--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "tvjs-google-analytics",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "This library provides Google Analytics support for Apple's tvOS TVMLKit JavaScript runtime. It uses the Google Analytics Measurement Protocol to provide a mobile SDK like API to track analytics events and screenviews within a tvOS Client/Server application.",
   "main": "google-analytics.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint .",
     "prepublish": "npm run lint"
   },
@@ -27,8 +27,15 @@
   },
   "homepage": "https://github.com/phase2/tvjs-google-analytics#readme",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.4.0",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.11.0"
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jest": "^21.17.0",
+    "jest": "^23.4.1",
+    "jest-localstorage-mock": "^2.2.0",
+    "regenerator-runtime": "^0.12.0"
   }
 }
