--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-  "presets": ["env"]
+  "presets": [["env", { "modules": false }]],
+  "env": {
+    "test": {
+      "presets": ["env"]
+    }
+  },
+  "plugins": [
+    "transform-object-rest-spread"
+  ]
 }
